# prism

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: compare_sqlite.py
data/: departments.csv  employees.csv
docs/: architecture.md
examples/: analytics.sql  quickstart.py
prism/: __init__.py  __main__.py  aggregate.py  cli.py  column.py  engine.py  expr.py  format.py  functions.py  relation.py  table.py  types.py
prism/exec/: __init__.py  aggregate.py  join.py  operators.py
prism/plan/: __init__.py  optimizer.py  planner.py
prism/server/: __init__.py  app.py
prism/server/static/: app.js  index.html  styles.css
prism/sql/: __init__.py  ast.py  lexer.py  parser.py  tokens.py
prism/storage/: __init__.py  catalog.py  csv_loader.py
tests/: conftest.py  test_aggregate.py  test_cli.py  test_column.py  test_expr.py  test_functions.py  test_join.py  test_lexer.py  test_operators.py  test_optimizer.py  test_parser.py  test_server.py  test_sql.py  test_storage.py  test_table.py  test_types.py
